--- a/OnThiJavaCore/.settings/org.eclipse.core.resources.prefs
+++ b/OnThiJavaCore/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,12 @@
 eclipse.preferences.version=1
+encoding//src/deso14/DaGiac.java=UTF-8
+encoding//src/deso14/Main.java=UTF-8
+encoding//src/deso14/TamGiac.java=UTF-8
+encoding//src/deso16/HinhTron.java=UTF-8
+encoding//src/deso17/Course.java=UTF-8
+encoding//src/deso17/Main.java=UTF-8
+encoding//src/deso18/Main.java=UTF-8
+encoding//src/deso3/Bao.java=UTF-8
 encoding//src/deso4/KhoiA.java=UTF-8
 encoding//src/deso4/ThiSinh.java=UTF-8
 encoding//src/deso4/TuyenSinh.java=UTF-8
