--- a/OnThiJavaCore/.settings/org.eclipse.core.resources.prefs
+++ b/OnThiJavaCore/.settings/org.eclipse.core.resources.prefs
@@ -2,6 +2,7 @@ eclipse.preferences.version=1
 encoding//src/deso14/DaGiac.java=UTF-8
 encoding//src/deso14/Main.java=UTF-8
 encoding//src/deso14/TamGiac.java=UTF-8
+encoding//src/deso15/TestTG.java=UTF-8
 encoding//src/deso16/HinhTron.java=UTF-8
 encoding//src/deso17/Course.java=UTF-8
 encoding//src/deso17/Main.java=UTF-8
